<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#0D0808">
 
        <!--  Header Starts-->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->
 
        <!-- Footer Start -->
                   <!-- Place footer next to header to set z-index property to minus value -->
        <!-- Footer Ends -->
 
        <!-- Login Form -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >
			
            <EditText
                android:id="@+id/txtUser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="text"
                android:hint="@string/user"
                android:singleLine="true" />
            <!-- Password Label -->

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_below="@id/txtUser"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:singleLine="true" />
            <!-- Login button -->

			<CheckBox 
			    android:id="@+id/chkRememberMe"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/txtPass"
			    android:text="@string/rememberPassword"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_below="@id/chkRememberMe"
                android:text="@string/login" />
            
            <TextView
                android:id="@+id/txtvWebsite"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:layout_below="@id/btnLogin"
                android:layout_marginTop="10dip" />
            
        </RelativeLayout>

        <!-- Login Form Ends -->
 
  </RelativeLayout>
</ScrollView>